add geolocation support

--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
         <meta charset="utf-8">
     </head>
     <body>
+        
         <p>Welcome to the chat app</p>
 
         <ol id="messages">
@@ -18,7 +19,8 @@
             <button>Send</button>
 
         </form>
-
+        
+        <button id="send-location">Send Location</button>
         <script src="/socket.io/socket.io.js"></script>
         <script src="/js/libs/jquery-3.3.1.min.js"></script>
         <script src="/js/index.js"></script>
